--- a/matou-landing-page.html
+++ b/matou-landing-page.html
@@ -764,7 +764,7 @@
     
     <footer>
         <div class="container">
-            <p>&copy; 2025 MATOU | THE NEXT GENERATION OF KIMONO</p>
+            <p>&copy; 2025 matou | THE NEXT GENERATION OF KIMONO</p>
         </div>
     </footer>
 </body>
